[package]
name = "e6tu1"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.31"
image = "0.25.8"
open = "5.3.2"
rat-salsa = "2.3.0"
rat-widget = "2.2.0"
ratatui = { version = "0.29.0", features = ["all-widgets", "macros"] }
ratatui-image = "8.0.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tui-menu = "0.3.0"
urlencoding = "2.1.3"
