[package]
name = "e6tu1"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
config = "0.15.18"
crossterm = "0.29.0"
futures = "0.3.31"
image = "0.25.8"
open = "5.3.2"
ratatui = { version = "0.29.0", features = ["all-widgets", "macros"] }
ratatui-image = "8.0.2"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
